<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mindtrack.muslimorganizer.ui.activity.MainActivity">

    <item
        android:id="@+id/action_add_mosque"
        android:icon="@drawable/tab_call_selector"
        android:title="Enter Mosque Code"
        app:showAsAction="always" />

    <!--item
        android:id="@+id/btn_notify"
        android:title="notify"
        android:onClick="showNotification"
        app:showAsAction="always" /-->

    <item
        android:id="@+id/action_refresh_timings"
        android:icon="@drawable/refresh"
        android:title="Refresh Timings"
        app:showAsAction="always" />

    <!--item
        android:id="@+id/action_location"
        android:icon="@drawable/loc"
        android:title="@string/action_location"
        app:showAsAction="always" /-->

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_compass"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/mosques"
        android:title="Update Mosque Time"
        android:onClick="updateMosqueTimeWebPage"
        app:showAsAction="never"/>

    <item
        android:id="@+id/create_mosque"
        android:title="Add Mosque"
        android:onClick="addMosqueWebPage"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_convert_date"
        android:title="@string/action_convert_date"
        app:showAsAction="never" />




    <item
        android:id="@+id/worldpraye"
        android:title="@string/action_world"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about_app"
        android:title="@string/action_about_app"
        app:showAsAction="never" />

</menu>
